k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: backend
          image: us-central1-docker.pkg.dev/bookstore-project-464717/bookstore/bookstore-backend:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: logs
              mountPath: /logs
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: logs
          emptyDir: {}
